--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/arantebw/file-metadata-microservice/issues"
   },
-  "homepage": "https://github.com/arantebw/file-metadata-microservice#readme"
+  "homepage": "https://github.com/arantebw/file-metadata-microservice#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1"
+  }
 }
