--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/arantebw/file-metadata-microservice#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
