--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "popper.js": "^1.15.0"
   }
